# presto

./: .gitignore  README.md  pyproject.toml
presto/: __init__.py  adict.py  asynco.py  client.py  handler.py  presto.py  request.py  response.py
presto/adict/: __init__.py  adict.py
presto/asynco/: __init__.py  client.py  handler.py  presto.py  request.py  response.py
presto/asyncs/: handler.py  presto.py  response.py
presto/client/: __init__.py  client.py
presto/presto/: __init__.py  client.py  handler.py  presto.py  request.py  response.py
presto/typing/: __init__.py  attr.py  copyable.py  serializable.py
